<resources>
    <string name="app_name">DeepL</string>
    <string name="image">Image</string>
    <string name="copy_clipboard">Text has been Copied</string>
    <string name="network_err">Oops, failed to connect to DeepL server</string>
    <string name="title_activity_settings">Settings</string>
    <string name="themeSettings">theme settings</string>
    <string name="theme">theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_battery">Set by Battery Saver</string>
    <string name="theme_default">System default</string>
    <string name="translation_screen_options">translation screen options</string>
    <string name="show_switch_lang_button">Show switch language button</string>
    <string name="use_popup_mode">Use pop-up mode</string>
    <string name="about_this_app">About this app</string>
    <string name="version">Version</string>

    <string name="key_dark_mode" translatable="false">defaultDarkMode</string>
    <string name="key_switch_lang_button" translatable="false">isEnabledSwapLangButton</string>
    <string name="key_switch_popup_mode" translatable="false">isEnabledPopupMode</string>
    <string name="key_version" translatable="false">appVersion</string>
    <string name="link_github_release" translatable="false">https://github.com/sakusaku3939/DeepLAndroid/releases</string>
</resources>
