<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/themeSettings">
        <DropDownPreference
            app:entries="@array/darkTheme"
            app:entryValues="@array/darkThemeValue"
            app:key="@string/key_dark_mode"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/translation_screen_options">
        <SwitchPreference
            app:key="@string/key_switch_lang_button"
            app:title="@string/show_switch_lang_button" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_this_app">
        <Preference
            app:key="@string/key_version"
            app:summary=""
            app:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>